Mais funcionalidades , Pagina html gerada

--- a/config.json
+++ b/config.json
@@ -1,4 +1,4 @@
 {
-	"diretoria": "/home/carpinteiro/workspace/Legendas Eclipse/src",
+	"diretoria": "/home/carpinteiro/xpto",
 	"linguagens" : "por"
 }
